k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: num-rec-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: num-rec-backend
  template:
    metadata:
      labels:
        app: num-rec-backend
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: num-rec-backend
          image: ghcr.io/nmiklavcic/num-rec-backend:latest
          ports:
            - containerPort: 8000
